# rust-code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy-docs.yml
crates/code-agents/: Cargo.toml
crates/code-agents/src/: builtin.rs  color.rs  coordinator.rs  definition.rs  fork.rs  lib.rs  loader.rs  memory_ctx.rs  registry.rs  resume.rs  runner.rs
crates/code-api/: Cargo.toml
crates/code-api/src/: client.rs  cost.rs  error.rs  lib.rs  model.rs  retry.rs  stream.rs  tokens.rs
crates/code-api/src/providers/: mod.rs  registry.rs
crates/code-api/src/providers/anthropic/: adapter.rs
crates/code-api/src/providers/gemini/: client.rs  mod.rs  stream.rs  types.rs
crates/code-api/src/providers/openai/: client.rs  stream.rs  types.rs
crates/code-api/src/providers/openai_compat/: client.rs
crates/code-api/tests/: gemini_integration.rs  gemini_tool_loop.rs
crates/code-auth/: Cargo.toml
crates/code-auth/src/: api_key.rs  lib.rs  oauth.rs  prefetch.rs  provider.rs  secure_storage.rs
crates/code-cli/: Cargo.toml
crates/code-cli/src/: args.rs  bootstrap.rs  main.rs  mcp_server.rs  output.rs  telemetry.rs  update_check.rs
crates/code-commands/: Cargo.toml
crates/code-commands/src/: clear.rs  color.rs  commit.rs  compact.rs  config.rs  context.rs  cost.rs  diff.rs  doctor.rs  exit.rs  export.rs  help.rs  init.rs  keybindings.rs  lib.rs  login.rs  logout.rs  mcp.rs  memory.rs  registry.rs  rename.rs  resume.rs  review.rs  session.rs  share.rs  skills.rs  status.rs  tasks.rs  theme.rs  usage.rs  version.rs
crates/code-compact/: Cargo.toml
crates/code-compact/src/: auto_compact.rs  compact.rs  context_collapse.rs  grouping.rs  lib.rs  micro_compact.rs  prompt.rs  reactive.rs
crates/code-config/: Cargo.toml
crates/code-config/src/: claude_md.rs  code_md.rs  global.rs  lib.rs  mdm.rs  project.rs  settings.rs  watcher.rs
crates/code-history/: Cargo.toml
crates/code-history/src/: input_history.rs  lib.rs  metadata.rs  paste_store.rs  resume.rs  session.rs  snip.rs  transcript.rs
crates/code-hooks/: Cargo.toml
crates/code-hooks/src/: config.rs  event.rs  executor_http.rs  executor_prompt.rs  executor_shell.rs  lib.rs  post_sampling.rs  registry.rs  session_hooks.rs  tool_hooks.rs
crates/code-mcp/: Cargo.toml
crates/code-mcp/src/: auth.rs  client.rs  config.rs  connection.rs  dynamic_tool.rs  lib.rs  registry_fetch.rs  transport.rs  transport_http.rs  transport_sse.rs  transport_stdio.rs
crates/code-memory/: Cargo.toml
crates/code-memory/src/: auto_extract.rs  lib.rs  loader.rs  memory_type.rs  paths.rs  prompt.rs  relevance.rs  scanner.rs  team.rs
crates/code-permissions/: Cargo.toml
crates/code-permissions/src/: auto_classifier.rs  bash_classifier.rs  bash_llm_classifier.rs  dangerous_patterns.rs  denial_tracking.rs  evaluator.rs  lib.rs  mode.rs  path_validation.rs  persistence.rs  rule.rs  rule_parser.rs
crates/code-query/: Cargo.toml
crates/code-query/src/: attachments.rs  attribution.rs  engine.rs  file_history.rs  file_state_cache.rs  interruption.rs  lib.rs  message_queue.rs  messages.rs  pipeline.rs  system_prompt.rs  token_budget.rs
crates/code-query/tests/: integration.rs
crates/code-sdk/: Cargo.toml
crates/code-sdk/src/: bridge.rs  lib.rs  message.rs  session.rs  structured_io.rs
crates/code-skills/: Cargo.toml
crates/code-skills/src/: bundled.rs  lib.rs  loader.rs  mcp_builder.rs  registry.rs  search.rs  skill.rs
crates/code-tasks/: Cargo.toml
crates/code-tasks/src/: agent_task.rs  lib.rs  output.rs  scheduled.rs  shell_task.rs  store.rs  task.rs  todo.rs
crates/code-tools/: Cargo.toml
crates/code-tools/src/: ask_user.rs  bash.rs  brief.rs  config_tool.rs  coordinator_tools.rs  cron.rs  execution.rs  file_edit.rs  file_read.rs  file_write.rs  glob.rs  grep.rs  hooks_stub.rs  lib.rs  lsp.rs  mcp_tool.rs  monitor.rs  notebook_edit.rs  orchestration.rs  plan_mode.rs  powershell.rs  progress.rs  registry.rs  remote_trigger.rs  result_storage.rs  sleep.rs  synthetic_output.rs  task_tools.rs  todo_write.rs  tool_search.rs  web_fetch.rs  web_search.rs  worktree.rs
crates/code-tui/: Cargo.toml
crates/code-tui/src/: app.rs  dialogs.rs  diff_view.rs  event_loop.rs  input.rs  keybindings.rs  lib.rs  markdown.rs  repl.rs  screen.rs  spinner.rs  status_bar.rs  theme.rs  vim.rs
crates/code-types/: Cargo.toml
crates/code-types/src/: error.rs  ids.rs  image.rs  lib.rs  message.rs  permissions.rs  provider.rs  stream.rs  tool.rs
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/assistant/: index.md
docs/docs/bootstrap/: index.md
docs/docs/bridge/: index.md
docs/docs/buddy/: index.md
docs/docs/cli/: index.md
docs/docs/commands/: index.md
docs/docs/components/: index.md
docs/docs/constants/: index.md
docs/docs/context/: index.md
docs/docs/coordinator/: index.md
docs/docs/entrypoints/: index.md
docs/docs/hooks/: index.md
docs/docs/ink/: index.md
docs/docs/keybindings/: index.md
docs/docs/memdir/: index.md
docs/docs/migrations/: index.md
docs/docs/misc/: proxy-and-native.md  vim-and-voice.md
docs/docs/overview/: architecture.md  data-flow.md  design-highlights.md  intro.md
docs/docs/plugins/: index.md
docs/docs/query/: index.md
docs/docs/remote/: index.md
docs/docs/root-files/: commands-registry.md  main-entry.md  query-engine.md  setup-and-cost.md  tool-framework.md
docs/docs/schemas/: index.md
docs/docs/screens/: index.md
docs/docs/server/: index.md
docs/docs/services/: analytics.md  api.md  compact.md  mcp.md  oauth-and-plugins.md  other-services.md
docs/docs/skills/: index.md
docs/docs/state/: index.md
docs/docs/tasks/: index.md
docs/docs/tools/: agent-tool.md  bash-tool.md  file-tools.md  mcp-tools.md  other-tools.md  plan-and-worktree.md  search-tools.md  task-tools.md
docs/docs/types/: index.md
docs/docs/utils/: auth-and-shell.md  bash-security.md  hooks-utils.md  messages.md  other-utils.md  permissions.md
docs/src/pages/: index.module.css  index.tsx
