[package]
name = "code-commands"
description = "Slash command system: 60+ commands (/compact, /help, /commit, /mcp, etc.)"
version.workspace = true
edition.workspace = true

[features]
default = []
bridge_mode = []

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
code-query = { workspace = true }
code-history = { workspace = true }
code-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
