[package]
name = "code-config"
description = "Configuration loading: global/project settings, MDM, CLAUDE.md"
version.workspace = true
edition.workspace = true

[dependencies]
code-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }
