[package]
name = "code-history"
description = "Session persistence: JSONL transcripts, input history, session resume, paste store"
version.workspace = true
edition.workspace = true

[features]
default = []
history_snip = []

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
