[package]
name = "code-hooks"
description = "Hook system: PreToolUse/PostToolUse/Notification events, shell/HTTP/prompt executors"
version.workspace = true
edition.workspace = true

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
