[package]
name = "code-mcp"
description = "MCP client: stdio/SSE/HTTP transports, connection management, dynamic tool registration"
version.workspace = true
edition.workspace = true

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
code-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
