[package]
name = "code-permissions"
description = "Permission system: modes, rules, dangerous pattern detection, bash classifier"
version.workspace = true
edition.workspace = true

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
