[package]
name = "code-skills"
description = "Skills system: bundled skills, custom skill loading from disk, MCP skill builders"
version.workspace = true
edition.workspace = true

[features]
default = []
skill_search = []

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
