[package]
name = "code-tools"
description = "Tool trait definition and all tool implementations (Bash, File*, Glob, Grep, Web, etc.)"
version.workspace = true
edition.workspace = true

[features]
default = []
# Feature-gated tools
proactive = []
kairos = ["proactive"]
agent_triggers = []
agent_triggers_remote = ["agent_triggers"]
coordinator_mode = []
monitor_tool = []

[dependencies]
code-types = { workspace = true }
code-config = { workspace = true }
code-permissions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
futures-util = { workspace = true }
