[package]
name = "code-types"
description = "Shared types: messages, permissions, tool interfaces, stream events"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
